@@ -11,6 +11,7 @@ CHANGELOG and HISTORY ( we try )                                         Okatea
 
 
 1.0.BETA.3
+! new breadcrumb policy
 
 
 1.0.BETA.2
